# rina

./: .flatpak-manifest.yml  .gitignore  CMakeLists.txt  README.md
data/: CMakeLists.txt  com.georgefb.rina.desktop  com.georgefb.rina.metainfo.xml  org.kde.rina.metainfo.xml
src/: CMakeLists.txt  Main.qml  bridge.cpp  bridge.h  generalsettings.kcfg  main.cpp
src/Sidebar/: CMakeLists.txt  FileDelegate.qml  FolderDelegate.qml  Sidebar.qml  filesmodel.cpp  filesmodel.h  foldersmodel.cpp  foldersmodel.h  sidebarsettings.kcfg
src/WebView/: CMakeLists.txt  WebView.qml  index.html
